airflow/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-webserver
  template:
    metadata:
      labels:
        app: airflow-webserver
    spec:

      containers:
        - name: airflow-webserver
          image: sivaji9412/airflow-custom:1.0
          command: ["airflow", "webserver"]

          volumeMounts:
            - name: airflow-config          # ✅ MUST exist
              mountPath: /opt/airflow/airflow.cfg
              subPath: airflow.cfg
            - name: dags
              mountPath: /opt/airflow/dags

      volumes:                              # ✅ SAME LEVEL
        - name: airflow-config
          configMap:
            name: airflow-config

        - name: dags-config
          configMap:
            name: airflow-dags

        - name: dags
          emptyDir: {}
