airflow/scheduler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: airflow-scheduler
  namespace: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow-scheduler
  template:
    metadata:
      labels:
        app: airflow-scheduler
    spec:

      containers:
        # 🔹 AIRFLOW SCHEDULER
        - name: airflow-scheduler
          image: sivaji9412/airflow-custom:1.0
          imagePullPolicy: IfNotPresent
          command: ["airflow", "scheduler"]

          volumeMounts:
            - name: airflow-config
              mountPath: /opt/airflow/airflow.cfg
              subPath: airflow.cfg
            - name: dags
              mountPath: /opt/airflow/dags

        # 🔹 STATSD EXPORTER SIDECAR
        - name: statsd-exporter
          image: prom/statsd-exporter:v0.28.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9102
            - name: statsd
              containerPort: 8125
              protocol: UDP

      volumes:
        - name: airflow-config
          configMap:
            name: airflow-config

        - name: dags-config
          configMap:
            name: airflow-dags

        - name: dags
          emptyDir: {}
