airflow/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: airflow-webserver
  namespace: airflow
spec:
  selector:
    app: airflow-webserver
  ports:
    - name: web
      port: 80
      targetPort: 8080
      protocol: TCP

    - name: statsd-metrics
      port: 9102
      targetPort: 9102
      protocol: TCP
